--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
  <h1>Hvordan publisere en webside på Github!</h1>
   <h2>1. Åpne nettleser å skriv inn https://github.com/</h2><p>Det første du må 
      gjøre er å åpne nettlesaren din, og så skrive inn https://github.com/.</p>
- <img src="Github.framside.ins.jpg" alt="Framside width="700"/>
+ <img src="Github.framside.ins.jpg" alt="Framside" width="700"/>
 
  <h2>2. Logg inn på Github</h2> <p>Neste steg er å logge inn på din Github bruker*. Trykk "Sign in", 
       deretter skriv inn brukernavnet og passordet ditt, og trykk "Sign in".</p>
   <h5>*Dersom du ikke har Github bruker må du registere deg.</h5>
- <img src="Github.logginn.jpg" alt="Logg inn" />
+ <img src="Github.logginn.jpg" alt="Logg inn" width="250" />
 
  <h2>3. Trykk "New repository"</h2><p>Neste steg er å trykke deg inn på 
   "New repository".</p> <h5>Repository kan oversettes til norsk som lagringsted eller oppbevaringssted.</h5>
@@ -37,9 +37,9 @@
 
   <h2>7. Lag en ny index.html og skriv inn innholdet</h2><p>Trykk på "Create new file", 
   kall denne filen index.html, kopier eller skriv inn innholdet du vil ha. Gå nederst på siden og trykk "Commit new file".</p>
-<img src="Github.indexmedeks.ins.jpg" alt="700" />
+<img src="Github.indexmedeks.ins.jpg" alt="Index.html" width="700" />
 
-  <h2>8. Sjekk ut nettsiden!</h2><p>Nå skal nettsiden være publisert, du kan finne URL'en ved å inn på settings. Sjekk ut siden! </p>
+  <h2>8. Sjekk ut nettsiden!</h2><p>Nå skal nettsiden være publisert, du kan finne URL'en ved å inn på "Settings" igjen å bla nedover. Sjekk ut siden! </p>
 <img src="Github.hvorurl.jpg" alt="URL" />
   </body>
 </html>
