--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   kall denne filen index.html, kopier eller skriv inn innholdet du vil ha. Gå nederst på siden og trykk "Commit new file".</p>
 <img src="Github.indexmedeks.ins.jpg" alt="Index.html" width="700" />
 
-  <h2>8. Sjekk ut nettsiden!</h2><p>Nå skal nettsiden være publisert, du kan finne URL'en ved å inn på "Settings" igjen å bla nedover. Sjekk ut siden! </p>
+  <h2>8. Sjekk ut nettsiden!</h2><p>Nå skal nettsiden være publisert, du kan finne URL'en ved å inn på "Settings" igjen og bla nedover til du finner "Github Pages". Sjekk ut siden! </p>
 <img src="Github.hvorurl.jpg" alt="URL" />
   </body>
 </html>
