--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <h2>2. Logg inn på Github</h2> <p>Neste steg er å logge inn på din Github bruker*. Trykk "Sign in", 
       deretter skriv inn brukernavnet og passordet ditt, og trykk "Sign in".</p>
   <h5>*Dersom du ikke har Github bruker må du registere deg.</h5>
- <img src="Github.logginn.jpg" alt="Logg inn" width="250" />
+ <img src="Github.logginn.JPG" alt="Logg inn" width="250" />
 
  <h2>3. Trykk "New repository"</h2><p>Neste steg er å trykke deg inn på 
   "New repository".</p> <h5>Repository kan oversettes til norsk som lagringsted eller oppbevaringssted.</h5>
@@ -40,6 +40,6 @@
 <img src="Github.indexmedeks.ins.jpg" alt="Index.html" width="700" />
 
   <h2>8. Sjekk ut nettsiden!</h2><p>Nå skal nettsiden være publisert, du kan finne URL'en ved å inn på "Settings" igjen og bla nedover. Sjekk ut siden! </p>
-<img src="Github.hvorurl.jpg" alt="URL" />
+<img src="Github.hvorurl.JPG" alt="URL" />
   </body>
 </html>
